# order_picking

./: README.md  package.json  pyproject.toml  tmp_check_invoices.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  B2BPick.vue  style.css
order_picking/: hooks.py  modules.txt  patches.txt  setup.py
order_picking/api/: api.py
order_picking/doctype/: order_pick.json
order_picking/order_picking/api/: api.py
order_picking/order_picking/doctype/b2b_pick_report/: b2b_pick_report.json  b2b_pick_report.py
order_picking/order_picking/doctype/b2b_pick_report_item/: b2b_pick_report_item.json  b2b_pick_report_item.py
order_picking/order_picking/doctype/b2b_pick_report_log/: b2b_pick_report_log.json  b2b_pick_report_log.py
order_picking/order_picking/doctype/order_pick/: order_pick.py
order_picking/order_picking/doctype/order_pick_item/: order_pick_item.json  order_pick_item.py
order_picking/order_picking/module_def/order_picking/: order_picking.json
order_picking/order_picking/page/order_picking/: order_picking.css  order_picking.html  order_picking.js  order_picking.json
order_picking/page/order_picking/: order_picking.html  order_picking.js
order_picking/patches/v1_0/: create_print_formats.py  reset_workspace.py  restore_invoice_statuses.py
order_picking/public/frontend/: index.html
order_picking/public/js/: b2b_pick_report.js  sales_invoice_list.js  sales_order.js
order_picking/workspace/order_picking/: order_picking.json
order_picking/www/: order_picking.py
(+5 files in other folders)
