[project]
name = "order_picking"
authors = [
    { name = "Your Company", email = "hello@example.com"}
]
description = "Order Picking App for ERPNext to ensure 100% accurate deliveries"
requires-python = ">=3.10"
readme = "README.md"
version = "0.0.1"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
